adds scoreboard functionality, tracks HP and stars gained from kills

--- a/styles/game.css
+++ b/styles/game.css
@@ -91,3 +91,10 @@ li {
     justify-items: center;
     gap: 5px;
 }
+
+tr,
+td {
+    width: 40px;
+    border: 2px solid grey;
+    text-align: center;
+}
