--- a/styles/game.css
+++ b/styles/game.css
@@ -50,9 +50,6 @@ main {
     height: 300px;
 }
 
-.opp {
-}
-
 .stat {
 }
 
@@ -83,12 +80,13 @@ main {
 #opp-list {
 }
 
-li {
+.opp {
     display: grid;
     grid-template-columns: 50px 60px 120px;
     background-color: antiquewhite;
     align-items: center;
     justify-items: center;
+    border: 1px solid black;
     gap: 5px;
 }
 
