--- a/styles/game.css
+++ b/styles/game.css
@@ -1,6 +1,7 @@
 main {
     display: flex;
     flex-direction: column;
+    background-image: url('/assets/paper-background.jpg');
 }
 
 #battle-log {
@@ -29,17 +30,17 @@ main {
 
 #user-container {
     display: flex;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 #opp-container {
     display: grid;
     grid-template-rows: 40px 1fr 40px;
-    background-color: darkgray;
+    /* background-color: darkgray; */
     justify-items: center;
     align-items: center;
     justify-content: center;
@@ -65,7 +66,7 @@ main {
 }
 
 .card {
-    background: goldenrod;
+    /* background: goldenrod; */
 }
 
 #opp-input {
