--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,7 @@ body {
     background: var(--background);
     display: grid;
     grid-template-rows: auto 1fr;
+    background-image: url('/assets/paper-background.jpg');
 }
 
 header {
@@ -20,14 +21,16 @@ header {
 
     display: flex;
     align-items: center;
+    justify-content: center;
+    padding-top: 30px;
     gap: 10px;
 
-    background-color: var(--header-background);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    /* background-color: var(--header-background);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
 }
 
 header .logo {
-    height: 100%;
+    height: 200%;
 }
 
 main {
